progress: authentication ms doc done
