# authentication/app/controllers/authenticationController.js
@@ -53,12 +53,12 @@ const login = async (req, res) => {
             await authenticationService.writeLogs(4, existingUser.userID, existingUser.userType);
             return res.status(403).json({ error : error.message });
         }
-        else if (error.message === "Expired refresh token") {
+        else if (error.message === "Expired refresh token" || error.message === "Invalid refresh token") {
             return res.status(401).json({ error: error.message });
         }
         else {
             console.error("Unexpected error while logging in : ", error);
-            res.status(500).json({ error: "Login failed" });
+            res.status(500).json({ error: "Internal server error" });
         }
     }
 };
@@ -78,7 +78,7 @@ const logout = async (req, res) => {
     }
     catch(error) {
         console.error("Unexpected error while logging out : ", error);
-        res.status(500).json({ error: "Logout failed" });
+        res.status(500).json({ error: "Internal server error" });
     }
 };
 
@@ -111,10 +111,10 @@ const register = async (req, res) => {
 
         switch(userType) {
             case "CLIENT":
-            case "LIVREUR":
+            case "DELIVERY":
             // For testing purposes
-            case "SERVICE TECHNIQUE":
-            /*case "SERVICE COMMERCIAL":*/ {
+            //case "TECHNICAL":
+            /*case "SALES":*/ {
                 const firstName = req.body["firstName"];
                 const lastName = req.body["lastName"];
                 const address = req.body["address"];
@@ -128,7 +128,7 @@ const register = async (req, res) => {
 
                 break;
             }
-            case "RESTAURATEUR": {
+            case "RESTAURANT": {
                 const restaurantName = req.body["restaurantName"];
                 const restaurantAddress = req.body["restaurantAddress"];
 
@@ -161,7 +161,13 @@ const register = async (req, res) => {
 
                 break;
             }
-            case "DEVELOPPEUR": {
+            case "DEVELOPER": {
+                const apiKey = req.body["apiKey"];
+
+                if (!apiKey || apiKey !== "azerty123!") {
+                    throw new Error("Invalid api key");
+                }
+
                 refreshToken = authenticationService.generateRefreshToken(email);
                 
                 newUser = await authenticationService.createDeveloper(email, encryptedPassword, userType, phoneNumber, refreshToken);
@@ -184,15 +190,18 @@ const register = async (req, res) => {
         else if (error.message === "Missing mandatory data") {
             return res.status(400).json({ error: `Missing mandatory data to create a ${userType}` });
         }
-        else if (error.message === "Failed to create restaurant") {
-            return res.status(500).json({ error: "Failed to create restaurant" });
-        }
         else if (error.message === "Invalid user type") {
             return res.status(400).json({ error: "Invalid user type"});
         }
+        else if (error.message === "Failed to create restaurant") {
+            return res.status(500).json({ error: "Failed to create restaurant" });
+        }
+        else if (error.message === "Invalid api key") {
+            return res.status(401).json({ error: `Invalid api key for ${userType}` });
+        }
         else {
             console.error("Unexpected error while registering : ", error);
-            res.status(500).json({ error: "Registration failed" });
+            res.status(500).json({ error: "Internal server error" });
         }
     }
 };
@@ -223,7 +232,7 @@ const findUser = async (req, res) => {
         }
         else {
             console.error("Unexpected error while finding a user : ", error);
-            return res.status(500).send({ error: error.message });
+            return res.status(500).send({ error: "Internal server error" });
         }
     }
 };
@@ -290,7 +299,7 @@ const token = async (req, res) => {
         }
         else {
             console.error("Unexpected error while verifying refresh token : ", error);
-            res.status(500).json({ error: "Token renewal failed" });
+            res.status(500).json({ error: "Internal server error" });
         }
     }
 };
@@ -316,8 +325,11 @@ const logs = async (req, res) => {
         if (error.message === "Invalid user type") {
             res.status(403).json({ error: "Forbidden" });
         }
-        console.error("Unexpected error while retrieving logs : ", error);
-        res.status(500).json({ error: "Failed to retrieve logs" });
+        else {
+            console.error("Unexpected error while retrieving logs : ", error);
+            res.status(500).json({ error: "Internal server error" });
+        }
+
     }
 };
 
@@ -344,7 +356,7 @@ const metrics = async (req, res) => {
         }
         else {
             console.error("Unexpected error while getting metrics : ", error);
-            res.status(500).json({ error: "Metrics collecting failed" });
+            res.status(500).json({ error: "Internal server error" });
         }
     }
 };
